--- a/FitnessWebApi/FitnessWebApi/FitnessWebApi/FitnessWebApi.csproj
+++ b/FitnessWebApi/FitnessWebApi/FitnessWebApi/FitnessWebApi.csproj
@@ -231,12 +231,19 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="AutoMapperHelper\AddFoodBindingModelToFoodConverter.cs" />
+    <Compile Include="AutoMapperHelper\AddMicronutrientBindingModelToMicronutrientConverter.cs" />
     <Compile Include="AutoMapperHelper\FoodToFoodViewModelConverter.cs" />
+    <Compile Include="AutoMapperHelper\FoodUpdateBindingModelToFoodConverter.cs" />
+    <Compile Include="AutoMapperHelper\MicronutrientToMicronutrientViewModel.cs" />
+    <Compile Include="AutoMapperHelper\UpdateMicronutrientBindingModelToMicronutrientConverter.cs" />
     <Compile Include="BindingModels\AddFoodBindingModel.cs" />
-    <Compile Include="BindingModels\FoodBindingModel.cs" />
+    <Compile Include="BindingModels\AddNutrientBindingModel.cs" />
+    <Compile Include="BindingModels\UpdateFoodBindingModel.cs" />
+    <Compile Include="BindingModels\UpdateMicronutrientBindingModel.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\FoodsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MicronutrientsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -249,6 +256,7 @@
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\FoodViewModel.cs" />
+    <Compile Include="ViewModels\MicronutrientViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
