end of the day commit

--- a/FitnessWebApi/FitnessWebApi/FitnessWebApi.DAL/FitnessWebApi.DAL.csproj
+++ b/FitnessWebApi/FitnessWebApi/FitnessWebApi.DAL/FitnessWebApi.DAL.csproj
@@ -52,8 +52,11 @@
     <Compile Include="Data\Models\Enumerations\Category.cs" />
     <Compile Include="Data\Models\Enumerations\TypeOfMicronutrients.cs" />
     <Compile Include="Data\Models\Enumerations\TypesOfFat.cs" />
+    <Compile Include="Data\Models\ErrorMessages.cs" />
     <Compile Include="Data\Models\Food.cs" />
+    <Compile Include="Data\Models\FoodsMicronutrients.cs" />
     <Compile Include="Data\Models\Micronutrient.cs" />
+    <Compile Include="Data\Models\Validation\BiggerThanZeroAttribute.cs" />
     <Compile Include="FoodRepository.cs" />
     <Compile Include="IFitnessRepository.cs" />
     <Compile Include="MicronutrientsRepository.cs" />
@@ -72,6 +75,14 @@
     <Compile Include="Migrations\201711161118551_MicronutrientsTableAddedCategoryColumnInFoodsAddedManyToManyAdded.cs" />
     <Compile Include="Migrations\201711161118551_MicronutrientsTableAddedCategoryColumnInFoodsAddedManyToManyAdded.Designer.cs">
       <DependentUpon>201711161118551_MicronutrientsTableAddedCategoryColumnInFoodsAddedManyToManyAdded.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711171615576_FoodsMicronutrientsTableAdded.cs" />
+    <Compile Include="Migrations\201711171615576_FoodsMicronutrientsTableAdded.Designer.cs">
+      <DependentUpon>201711171615576_FoodsMicronutrientsTableAdded.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711171626001_FoodsMicronutrientsTableAddedConnectionBetweenEntitiesAdded.cs" />
+    <Compile Include="Migrations\201711171626001_FoodsMicronutrientsTableAddedConnectionBetweenEntitiesAdded.Designer.cs">
+      <DependentUpon>201711171626001_FoodsMicronutrientsTableAddedConnectionBetweenEntitiesAdded.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -94,6 +105,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711161118551_MicronutrientsTableAddedCategoryColumnInFoodsAddedManyToManyAdded.resx">
       <DependentUpon>201711161118551_MicronutrientsTableAddedCategoryColumnInFoodsAddedManyToManyAdded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711171615576_FoodsMicronutrientsTableAdded.resx">
+      <DependentUpon>201711171615576_FoodsMicronutrientsTableAdded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711171626001_FoodsMicronutrientsTableAddedConnectionBetweenEntitiesAdded.resx">
+      <DependentUpon>201711171626001_FoodsMicronutrientsTableAddedConnectionBetweenEntitiesAdded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
